Support Virtual Thread if JDK version is 19 or later.